@startuml

class University { 
    -id : int
    -name : String
    -facultyIds : List
    +getFaculties() : List
    +addFaculty(faculty : Faculty) : void
    +removeFaculty(faculty : Faculty) : void 
    +getName() : String 
    +getId() : int 
    +getFacultyIds() : List
}

class Classroom {
    -id : int
    -capacity : int
    +getId() : int
    +getCapcity() : int
}

class Department {
    -id : int
    -name : String 
    -teacherIds : List
    -studentIds : List
    -subjectIds : List
    +addTeacher(teacher : Teacher) : void
    +removeTeacher(teacher : Teacher) : void
    +addStudent(student : Student) : void
    +removeStudent(student : Student) : void
    +addSubject(subject : Subject) : void
    +removeSubject(subject : Subject) : void
    +getId() : int
    +getName() : String 
    +getTeacherIds() : List
    +getStudentIds() : List
    +getSubjectIds() : List
}

class Faculty {
    -id : int
    -name : String 
    -departmentIds : List
    +getId() : int
    +getName() : String 
    +addDepartment(department : Departament) : void
    +removeDepartment(department : Departament) : void
    +getDepartmentIds() : List
}

class Grade {
    -id : int
    -value : int 
    +getCourseId() : int
    +getValue() : int
}

class Group {
    -id : int 
    -studentIds : List
    +getName(name : String) : String
    +addStudent(student : Student) : void
    +removeStudent(student : Student) : void 
    +getId() : int
    +getStudentIds() : List
}

class Schedule {
    -id : int 
    -subjectId : int
    -teacherId : int
    -groupId : int 
    -classroomId : int 
    -date : LocalDateTime
    +getId() : int 
    +getSubjectId() : int 
    +getTeacherId() : int 
    +getGroupId() : int 
    +getClassroomId() : int 
    +getDate() : LocalDateTime
    +toString() : String
}

class Student {
    -id : int 
    -groupId : int 
    -subjectAssessment : Map
    +getId() : int 
    +getGroupId() : int 
    +setGroupId(group : Group) : void
    +getSubjectAssessment() : Map
    +enrollToSubject(subject : Subject) : void 
    +assignGrade(grade : Grade) : void
    +calculateAverageGrade() : double
}

class Subject {
    -id : int 
    -description : String 
    -teacherId : int
    +setDescription(description : String) : void 
    +setTeacherId(teacher : Teacher) : void 
    +getTeacherId() : int 
    +getId() : int 
    +getDescription() : String 
}

class Teacher {
    -id : int
    -subjectIds : List
    +getId() : int 
    +getSubjectId() : List
    +assignToSubject(subject : Subject) : void 
    +assignGrade(sudent : Student, subject : Subject, value : int) : void
}

class Executor {
    +Run() : void 
}

Department ..> Teacher
Department ..> Student
Department ..> Subject
Faculty ..> Department
Group ..> Student
Schedule ..> Subject
Schedule ..> Teacher
Schedule ..> Group
Schedule ..> Classroom
Student ..> Group
Student ..> Subject
Student ..> Grade
Teacher ..> Subject
Teacher ..> Student
University ..> Faculty
Subject ..> Teacher

@enduml
